/*
 * $Id: ChangeLog,v 1.581 2009-03-14 06:55:48 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-03-10 22:41 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_windows.c
    * Changed __MINGW__ to __MINGW32__ for preventing MinGW
      compilation.
      Reported by CarozoDeQuilmes.
  * source/h_picture.prg
    ! Fixed scrollbar position when scrollbar is hidden.
  * source/h_grid.prg
    ! Fixed ::CellCaption() method.
    * Execute ::DoChange() when ::DeleteAllItems() is called.
  * source/h_form.prg
    * Execute ::OnSize during mouse resize when autoadjust is disabled.

2009-03-02 19:51 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_image.ch
  * source/h_button.prg
  * source/h_image.prg
  * source/h_picture.prg
    * Using TPicture instead of TImage.

2009-03-02 01:12 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_image.c
    + _OOHG_ScaleImage() function added.
  * source/h_picture.prg
    + ::Zoom method added.
    ! Fixed scrollbar issues.

2009-03-01 23:05 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  + include/i_picture.ch
  * include/oohg.ch
  * source/common_make.bat
  * source/makelib_mingw.bat
  + source/h_picture.prg
    + TPicture() control added.

2009-03-01 10:05 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    + TWindow:BackBitmap method added.
  * source/h_form.prg
    ! Small order correction.

2009-02-22 16:00 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_tab.prg
    ! Only moves to TOP when it's inside any container.

2009-02-20 23:23 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/winprint.prg
    ! Few casting added.

2009-02-18 20:20 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
  * source/h_xbrowse.prg
    ! Fixed scroll position when ::lDescending.
